--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -46,13 +46,35 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Connector.cs" />
+    <Compile Include="Classes\Conversation.cs" />
+    <Compile Include="Classes\Factories\ConnectorFactory.cs" />
+    <Compile Include="Classes\Factories\InputFactory.cs" />
+    <Compile Include="Classes\Factories\OutputFactory.cs" />
+    <Compile Include="Classes\FileSystem.cs" />
+    <Compile Include="Classes\GroupGetter.cs" />
+    <Compile Include="Classes\Message.cs" />
+    <Compile Include="ConnectorManager.cs" />
+    <Compile Include="Enums\ConnectorType.cs" />
+    <Compile Include="FileSystems\UsualFileSystem.cs" />
+    <Compile Include="FileSystems\ZipArchiveFileSystem.cs" />
     <Compile Include="Helpers\AssemblyVersion.cs" />
+    <Compile Include="Classes\Input.cs" />
+    <Compile Include="Classes\Output.cs" />
+    <Compile Include="Inputs\SkypeDbInputFactory.cs" />
+    <Compile Include="Inputs\SkypeInput.cs" />
+    <Compile Include="Outputs\PlainTextOutput.cs" />
+    <Compile Include="Outputs\PlainTextOutputFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\SkyNinja.pfx">
       <Link>SkyNinja.pfx</Link>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Attributes\" />
+    <Folder Include="GroupGetters\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
