--- a/Cli/App.config
+++ b/Cli/App.config
@@ -15,7 +15,7 @@
               errorStream="true"/>
     </targets>
     <rules>
-      <logger name="*" minlevel="Debug" writeTo="console" />
+      <logger name="*" minlevel="Trace" writeTo="console" />
     </rules>
   </nlog>
 </configuration>
