--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -54,13 +54,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Chat.cs" />
     <Compile Include="Classes\Connector.cs" />
     <Compile Include="Classes\Conversation.cs" />
-    <Compile Include="Classes\ChatEnumerator.cs" />
+    <Compile Include="Classes\ConversationEnumerator.cs" />
     <Compile Include="Classes\Factories\ConnectorFactory.cs" />
     <Compile Include="Classes\Factories\InputFactory.cs" />
     <Compile Include="Classes\Factories\OutputFactory.cs" />
     <Compile Include="Classes\FileSystem.cs" />
+    <Compile Include="Classes\Group.cs" />
     <Compile Include="Classes\GroupGetter.cs" />
     <Compile Include="Classes\Message.cs" />
     <Compile Include="ConnectorManager.cs" />
@@ -73,7 +75,7 @@
     <Compile Include="Classes\Input.cs" />
     <Compile Include="Classes\Output.cs" />
     <Compile Include="Helpers\ExitCodes.cs" />
-    <Compile Include="Inputs\Skype\SkypeChatEnumerator.cs" />
+    <Compile Include="Inputs\Skype\SkypeConversationEnumerator.cs" />
     <Compile Include="Inputs\Skype\SkypeDbInputFactory.cs" />
     <Compile Include="Inputs\Skype\SkypeIdInputFactory.cs" />
     <Compile Include="Inputs\Skype\SkypeInput.cs" />
