Initial migration to plain text output

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -62,21 +62,25 @@
     <Compile Include="Classes\Factories\InputFactory.cs" />
     <Compile Include="Classes\Factories\OutputFactory.cs" />
     <Compile Include="Classes\FileSystem.cs" />
-    <Compile Include="Classes\Group.cs" />
-    <Compile Include="Classes\GroupGetter.cs" />
+    <Compile Include="Classes\Grouper.cs" />
     <Compile Include="Classes\Message.cs" />
-    <Compile Include="ConnectorManager.cs" />
     <Compile Include="Enums\ConnectorType.cs" />
     <Compile Include="Enums\InternalMessageType.cs" />
     <Compile Include="Exceptions\InternalException.cs" />
-    <Compile Include="Exceptions\ConnectorUriException.cs" />
+    <Compile Include="Exceptions\InvalidUriParametersInternalException.cs" />
     <Compile Include="Extensions\DbDataReaderExtensions.cs" />
+    <Compile Include="AllFileSystems.cs" />
     <Compile Include="FileSystems\UsualFileSystem.cs" />
     <Compile Include="FileSystems\ZipArchiveFileSystem.cs" />
+    <Compile Include="AllGroupers.cs" />
+    <Compile Include="Groupers\ParticipantsGrouper.cs" />
     <Compile Include="Helpers\AssemblyVersion.cs" />
     <Compile Include="Classes\Input.cs" />
     <Compile Include="Classes\Output.cs" />
+    <Compile Include="Helpers\DateTimeHelper.cs" />
     <Compile Include="Helpers\ExitCodes.cs" />
+    <Compile Include="Helpers\Tasks.cs" />
+    <Compile Include="AllConnectors.cs" />
     <Compile Include="Inputs\DataReaderAsyncEnumerator.cs" />
     <Compile Include="Inputs\Skype\SkypeMessageType.cs" />
     <Compile Include="Inputs\Skype\SkypeConversationEnumerator.cs" />
@@ -99,7 +103,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Attributes\" />
-    <Folder Include="GroupGetters\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="x64\SQLite.Interop.dll">
