--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Enums\ConnectorType.cs" />
     <Compile Include="Enums\InternalMessageType.cs" />
     <Compile Include="Everything.cs" />
+    <Compile Include="Exceptions\DuplicateGroupInternalException.cs" />
     <Compile Include="Exceptions\InternalException.cs" />
     <Compile Include="Exceptions\InvalidUriParametersInternalException.cs" />
     <Compile Include="Extensions\DbDataReaderExtensions.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="FileSystems\Zip\ZipFileSystem.cs" />
     <Compile Include="FileSystems\Zip\ZipFileSystemFactory.cs" />
     <Compile Include="Groupers\CombineGrouper.cs" />
+    <Compile Include="Groupers\YearMonthGrouper.cs" />
     <Compile Include="Groupers\ParticipantsGrouper.cs" />
     <Compile Include="Helpers\AssemblyVersion.cs" />
     <Compile Include="Classes\Input.cs" />
