--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -77,6 +77,7 @@
     <Compile Include="FileSystems\Zip\ZipFileSystem.cs" />
     <Compile Include="FileSystems\Zip\ZipFileSystemFactory.cs" />
     <Compile Include="Groupers\CombineGrouper.cs" />
+    <Compile Include="Groupers\DayGrouper.cs" />
     <Compile Include="Groupers\YearMonthGrouper.cs" />
     <Compile Include="Groupers\ParticipantsGrouper.cs" />
     <Compile Include="Helpers\AssemblyVersion.cs" />
