Accept Zip entry encoding

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -54,6 +54,7 @@
     </Reference>
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\AsyncEnumerator.cs" />
