--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -71,8 +71,10 @@
     <Compile Include="Everything.cs" />
     <Compile Include="Exceptions\DuplicateGroupInternalException.cs" />
     <Compile Include="Exceptions\InternalException.cs" />
-    <Compile Include="Exceptions\InvalidUriParametersInternalException.cs" />
+    <Compile Include="Exceptions\InvalidUriParameterInternalException.cs" />
+    <Compile Include="Exceptions\KnownKeyNotFoundInternalException.cs" />
     <Compile Include="Extensions\DbDataReaderExtensions.cs" />
+    <Compile Include="Extensions\DictionaryExtensions.cs" />
     <Compile Include="FileSystems\Usual\UsualFileSystem.cs" />
     <Compile Include="FileSystems\Usual\UsualFileSystemFactory.cs" />
     <Compile Include="FileSystems\Zip\ZipFileSystem.cs" />
