--- a/Core/packages.config
+++ b/Core/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="docopt.net" version="0.6.1.5" targetFramework="net45" />
   <package id="NLog" version="2.1.0" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.91.3" targetFramework="net45" />
 </packages>
