Change log messages.

--- a/Cli/App.config
+++ b/Cli/App.config
@@ -11,7 +11,7 @@
     <targets>
       <target name="console"
               xsi:type="ColoredConsole"
-              layout="${time} ${logger} ${level}: ${message} ${exception:format=ToString,StackTrace}"
+              layout="${date:universalTime=true} UTC ${logger} ${level}: ${message} ${exception:format=ToString,StackTrace}"
               errorStream="true"/>
     </targets>
     <rules>
