--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Classes\Factories\InputFactory.cs" />
     <Compile Include="Classes\Factories\OutputFactory.cs" />
     <Compile Include="Classes\FileSystem.cs" />
+    <Compile Include="Classes\Filter.cs" />
     <Compile Include="Classes\Grouper.cs" />
     <Compile Include="Classes\Message.cs" />
     <Compile Include="Enums\ConnectorType.cs" />
@@ -79,6 +80,7 @@
     <Compile Include="FileSystems\Usual\UsualFileSystemFactory.cs" />
     <Compile Include="FileSystems\Zip\ZipFileSystem.cs" />
     <Compile Include="FileSystems\Zip\ZipFileSystemFactory.cs" />
+    <Compile Include="Filters\NoneFilter.cs" />
     <Compile Include="Groupers\CombineGrouper.cs" />
     <Compile Include="Groupers\DayGrouper.cs" />
     <Compile Include="Groupers\YearMonthGrouper.cs" />
