--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -81,13 +81,15 @@
     <Compile Include="FileSystems\Usual\UsualFileSystemFactory.cs" />
     <Compile Include="FileSystems\Zip\ZipFileSystem.cs" />
     <Compile Include="FileSystems\Zip\ZipFileSystemFactory.cs" />
-    <Compile Include="Filters\DateTimeValueFilter.cs" />
-    <Compile Include="Filters\GetterFilter.cs" />
-    <Compile Include="Filters\GreaterThanOperatorFilter.cs" />
-    <Compile Include="Filters\NoneGetterFilter.cs" />
-    <Compile Include="Filters\OperatorFilter.cs" />
-    <Compile Include="Filters\TimestampGetterFilter.cs" />
-    <Compile Include="Filters\ValueGetterFilter.cs" />
+    <Compile Include="Filters\FieldValueFilter.cs" />
+    <Compile Include="Filters\Parsing\BinaryOperatorOutputToken.cs" />
+    <Compile Include="Filters\Parsing\FieldValueOutputToken.cs" />
+    <Compile Include="Filters\Parsing\OperatorOutputToken.cs" />
+    <Compile Include="Filters\Parsing\OutputToken.cs" />
+    <Compile Include="Filters\Parsing\ValueOutputToken.cs" />
+    <Compile Include="Filters\Parsing\TokenType.cs" />
+    <Compile Include="Filters\Parsing\ConstValueOutputToken.cs" />
+    <Compile Include="Filters\ConstValueFilter.cs" />
     <Compile Include="Groupers\CombineGrouper.cs" />
     <Compile Include="Groupers\DayGrouper.cs" />
     <Compile Include="Groupers\YearMonthGrouper.cs" />
