--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -81,9 +81,11 @@
     <Compile Include="FileSystems\Usual\UsualFileSystemFactory.cs" />
     <Compile Include="FileSystems\Zip\ZipFileSystem.cs" />
     <Compile Include="FileSystems\Zip\ZipFileSystemFactory.cs" />
+    <Compile Include="Filters\BinaryOperatorFilter.cs" />
     <Compile Include="Filters\FieldValueFilter.cs" />
     <Compile Include="Filters\Parsing\BinaryOperatorOutputToken.cs" />
     <Compile Include="Filters\Parsing\FieldValueOutputToken.cs" />
+    <Compile Include="Filters\Parsing\KeywordBinaryOperatorOutputToken.cs" />
     <Compile Include="Filters\Parsing\OperatorOutputToken.cs" />
     <Compile Include="Filters\Parsing\OutputToken.cs" />
     <Compile Include="Filters\Parsing\ValueOutputToken.cs" />
