--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ env:
  global:
   - EnableNuGetPackageRestore=true 
 install:
-  - apt-get install mono-devel
+  - sudo apt-get install mono-devel
 script:
   - xbuild /p:Configuration=Release SkyNinja.sln
