--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
-language: c
+language: objective-c
 env:
- global:
-  - EnableNuGetPackageRestore=true 
+  global:
+    - EnableNuGetPackageRestore=true
+  matrix:
+    - MONO_PACKAGE="MonoFramework-MRE-3.2.7.macos10.xamarin.x86.pkg"
 install:
-  - sudo apt-get install mono-devel
-after_install:
-  - mono --version
+  - wget "http://download.mono-project.com/archive/3.2.7/macos-10-x86/${MONO_PACKAGE}"
+  - sudo installer -pkg ${MONO_PACKAGE} -target /
 script:
   - xbuild /p:Configuration=Release SkyNinja.sln
