Rename CombineGrouper, Readme sections

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -49,7 +49,8 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.SQLite">
+    <Reference Include="System.Data.SQLite, Version=1.0.91.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\System.Data.SQLite.Core.1.0.91.3\lib\net45\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.IO.Compression" />
@@ -94,7 +95,7 @@
     <Compile Include="Filters\Parsing\TokenType.cs" />
     <Compile Include="Filters\Parsing\ConstValueOutputToken.cs" />
     <Compile Include="Filters\ConstValueFilter.cs" />
-    <Compile Include="Groupers\CombineGrouper.cs" />
+    <Compile Include="Groupers\ChainGrouper.cs" />
     <Compile Include="Groupers\DayGrouper.cs" />
     <Compile Include="Groupers\YearMonthGrouper.cs" />
     <Compile Include="Groupers\ParticipantsGrouper.cs" />
@@ -127,7 +128,6 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Content Include="x64\SQLite.Interop.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
