--- a/Cli/Cli.csproj
+++ b/Cli/Cli.csproj
@@ -70,6 +70,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GrouperHelper.cs" />
+    <Compile Include="ParsedUriHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
