--- a/Cli/Cli.csproj
+++ b/Cli/Cli.csproj
@@ -91,9 +91,11 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FilterHelper.cs" />
-    <Compile Include="GrouperHelper.cs" />
-    <Compile Include="ParsedUriHelper.cs" />
+    <Compile Include="Helpers\FilterFactory.cs" />
+    <Compile Include="Helpers\FilterHelper.cs" />
+    <Compile Include="Helpers\GrouperHelper.cs" />
+    <Compile Include="Helpers\ParameterNameGetter.cs" />
+    <Compile Include="Helpers\ParsedUriHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
