--- a/Cli/App.config
+++ b/Cli/App.config
@@ -11,11 +11,19 @@
     <targets>
       <target name="console"
               xsi:type="ColoredConsole"
-              layout="${date:universalTime=true} UTC ${logger} ${level}: ${message} ${exception:format=ToString,StackTrace}"
-              errorStream="true"/>
+              layout="${logger} ${level}: ${message} ${exception:format=ToString,StackTrace}"
+              errorStream="true" />
+      <target name="file"
+              xsi:type="File"
+              layout="${date:universalTime=true} ${logger} ${level}: ${message} ${exception:format=ToString,StackTrace}"
+              fileName="${basedir}/Cli.log"
+              compressed="true"
+              keepFileOpen="true"
+              encoding="utf-8" />
     </targets>
     <rules>
-      <logger name="*" minlevel="Trace" writeTo="console" />
+      <logger name="*" minlevel="Info" writeTo="console" />
+      <logger name="*" minlevel="Trace" writeTo="file" />
     </rules>
   </nlog>
 </configuration>
