--- a/Cli/App.config
+++ b/Cli/App.config
@@ -17,9 +17,9 @@
               xsi:type="File"
               layout="${date:universalTime=true} ${logger} ${level}: ${message} ${exception:format=ToString,StackTrace}"
               fileName="${basedir}/Cli.log"
-              compressed="true"
               keepFileOpen="true"
-              encoding="utf-8" />
+              deleteOldFileOnStartup="true"
+              encoding="UTF-8" />
     </targets>
     <rules>
       <logger name="*" minlevel="Info" writeTo="console" />
